# Deneme-TRade

./: README.md  pyproject.toml
data/: bist100_symbols.txt
src/trade_reporter/: __init__.py  cli.py  indicators.py  models.py  report.py  scanner.py
tests/: test_scanner.py
